--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello2"
+name = "rust-training"
 version = "0.1.0"
 authors = ["Farzad FARID <farzy@farzy.org>"]
 edition = "2018"
