--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rand_chacha = "0.2"
 quick-error = "1.2.3"
 error-chain = "0.12.2"
 backtrace = "0.3.46"
+failure = "0.1.7"
+failure_derive = "0.1.7"
