--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ error-chain = "0.12.2"
 backtrace = "0.3.46"
 failure = "0.1.7"
 failure_derive = "0.1.7"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
