--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ failure_derive = "0.1.7"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+hello_macro_derive = { path = "hello_macro_derive" }
