--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,7 @@ rand_chacha = "0.3.1"
 quick-error = "2.0.1"
 error-chain = "0.12.2"
 backtrace = "0.3.46"
-failure = "0.1.8"
-failure_derive = "0.1.8"
+thiserror = "1.0"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
